--- a/resources/words_en.properties
+++ b/resources/words_en.properties
@@ -1,13 +1,21 @@
-charm=Charm
-delete=Delete
-save=Save
-name=Name
-surname=Surname
 about=About
-gender=Gender
-all_rights_reserved=All rights reserved 2024
-MALE=Male
-FEMALE=Female
-OTHER=Other
+active=Active
 age=Age
-birth-date=birth date
+all-rights-reserved=All rights reserved
+birth-date=Birth date
+confirm-password=Confirm password
+delete=Delete
+email=Email
+email-warning=Changing your mail may have negative effects
+female=Female
+gender=Gender
+inactive=Inactive
+male=Male
+name=Name
+other=Other
+page-bad-request=Bad request
+page-not-found=Page not found
+password=Password
+save=Save
+status=Status
+surname=Surname
