--- a/resources/words_kz.properties
+++ b/resources/words_kz.properties
@@ -1,13 +1,21 @@
-charm=\u0422\u0430\u043D\u044B\u0441\u0443
-delete=\u0416\u043E\u044E
-save=\u0421\u0430\u049B\u0442\u0430\u0443
-name=\u0410\u0442\u044B
-surname=\u0422\u0435\u0433\u0456
-about=\u0422\u0443\u0440\u0430\u043B\u044B
-gender=\u0416\u044B\u043D\u044B\u0441\u044B
-all_rights_reserved=\u041E\u0439\u0431\u043E\u0439 \u043C\u044B\u043D\u0430\u0443 \u043D\u0435 \u0434\u0435\u0439\u0434\u0456 2024
-MALE=\u0415\u0440\u043A\u0435\u043A
-FEMALE=\u049A\u0430\u0442\u044B\u043D
-OTHER=\u0411\u0435\u043B\u0433\u0456\u0441\u0456\u0437
-age=\u0416\u0430\u0441\u044B
-birth-date=\u0422\u0443\u044B\u043B\u0493\u0430\u043D \u043A\u04AF\u043D\u0456
+about=\u04B0About
+active=\u04B0Active
+age=\u04B0Age
+all-rights-reserved=\u04B0All rights reserved
+birth-date=\u04B0Birth date
+confirm-password=\u04B0Confirm password
+delete=\u04B0Delete
+email=\u04B0Email
+email-warning=\u04B0Changing your mail may have negative effects
+female=\u04B0Female
+gender=\u04B0Gender
+inactive=\u04B0Inactive
+male=\u04B0Male
+name=\u04B0Name
+other=\u04B0Other
+page-bad-request=\u04B0Bad request
+page-not-found=\u04B0Page not found
+password=\u04B0Password
+save=\u04B0Save
+status=\u04B0Status
+surname=\u04B0Surname
