--- a/resources/words_kz.properties
+++ b/resources/words_kz.properties
@@ -1,21 +1,27 @@
-about=\u04B0About
-active=\u04B0Active
-age=\u04B0Age
-all-rights-reserved=\u04B0All rights reserved
-birth-date=\u04B0Birth date
-confirm-password=\u04B0Confirm password
-delete=\u04B0Delete
-email=\u04B0Email
-email-warning=\u04B0Changing your mail may have negative effects
-female=\u04B0Female
-gender=\u04B0Gender
-inactive=\u04B0Inactive
-male=\u04B0Male
-name=\u04B0Name
-other=\u04B0Other
+charm=Charm \u049A\u0430\u0437\u0430\u0445\u0441\u0442\u0430\u043D
+about=\u0422\u0443\u0440\u0430\u043B\u044B
+active=\u0411\u0435\u043B\u0441\u0435\u043D\u0434\u0456
+age=\u0416\u0430\u0441\u044B
+all-rights-reserved=\u0411\u0430\u0440\u043B\u044B\u04B1\u049B \u049B\u04B1\u049B\u044B\u049B \u0441\u0430\u049B\u0442\u0430\u043B\u0493\u0430\u043D
+birth-date=\u0422\u0443\u044B\u043B\u0493\u0430\u043D \u043A\u04AF\u043D\u0456
+confirm-password=\u049A\u04B1\u043F\u0438\u044F\u0441 \u0441\u04E9\u0437
+delete=\u0416\u043E\u044E
+email=Email
+email-warning=Email \u04E9\u0437\u0433\u0435\u0440\u0442\u0443 \u049B\u0430\u0442\u0435\u0440\u0433\u0435 \u04D9\u043A\u0435\u043B\u0443 \u043C\u04AF\u043C\u043A\u0456\u043D
+female=\u049B\u0430\u0442\u044B\u043D
+gender=\u0416\u044B\u043D\u044B\u0441\u044B
+inactive=\u0411\u0435\u043B\u0441\u0435\u043D\u0441\u0456\u0437
+male=\u0435\u0440\u043A\u0435\u043A
+name=\u0410\u0442\u044B
+other=\u0431\u0430\u0441\u049B\u0430
 page-bad-request=\u04B0Bad request
-page-not-found=\u04B0Page not found
-password=\u04B0Password
-save=\u04B0Save
-status=\u04B0Status
-surname=\u04B0Surname
+page-not-found=\u043F\u0430\u0440\u0430\u049B\u0448\u0430 \u0442\u0430\u0431\u044B\u043B\u043C\u0430\u0434\u044B
+password=\u049A\u04B1\u043F\u0438\u044F \u0441\u04E9\u0437
+save=\u0421\u0430\u049B\u0442\u0430\u0443
+status=\u0416\u0430\u0493\u0434\u0430\u0439\u044B
+surname=\u0422\u0435\u0433\u0456
+error.email.invalid= \u0414\u04B1\u0440\u044B\u0441 \u0435\u043C\u0435\u043C email
+error.email.exist=\u0411\u04B1\u043D\u0434\u0430\u0439 email \u0431\u0430\u0440
+error.password.invalid=\u049A\u0430\u0442\u0435 \u049B\u04B1\u043F\u0438\u044F \u0441\u04E9\u0437
+error.age.invalid=\u0416\u0430\u0441\u044B 18 \u0431\u0435\u043D 100 \u0430\u0440\u0430\u043B\u044B\u0493\u044B\u043D\u0434\u0430 \u0431\u043E\u043B\u0443 \u043A\u0435\u0440\u0435\u043A
+error.name.invalid=\u0410\u0442\u044B \u0431\u043E\u0441 \u0431\u043E\u043B\u0430 \u0430\u043B\u043C\u0430\u0439\u0434\u044B
