--- a/resources/words_en.properties
+++ b/resources/words_en.properties
@@ -1,3 +1,4 @@
+charm=Charm International
 about=About
 active=Active
 age=Age
@@ -19,3 +20,8 @@ password=Password
 save=Save
 status=Status
 surname=Surname
+error.email.invalid=email invalid
+error.email.exist= email exist
+error.password.invalid=password invalid
+error.age.invalid=error age invalid
+error.name.invalid=error name invalid
